--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Einar Storvik</title>
     <style>
+        /* Generell stil */
         body {
             font-family: Arial, sans-serif;
             background-color: #1f1f1f;
@@ -47,6 +48,50 @@
         a {
             color: #ff4c4c;
             text-decoration: none;
+        }
+
+        /* Media Query for Mobile (Max-width: 768px) */
+        @media screen and (max-width: 768px) {
+            body {
+                font-size: 14px; /* Reducing text size for smaller screens */
+            }
+
+            h1 {
+                font-size: 2rem; /* Adjusting heading size for mobile */
+            }
+
+            .container {
+                margin: 0 10px;  /* Adding some margin on smaller screens */
+            }
+
+            .quote {
+                font-size: 1.2rem; /* Adjusting quote font size for mobile */
+            }
+
+            .profile-box {
+                width: 100%;  /* Making profile box responsive */
+                padding: 10px;
+            }
+        }
+
+        /* Media Query for Extra Small Devices (Max-width: 480px) */
+        @media screen and (max-width: 480px) {
+            h1 {
+                font-size: 1.5rem; /* Smaller font for extra small screens */
+            }
+
+            .container {
+                margin: 0 5px;  /* Narrower margin on very small screens */
+                padding: 10px;
+            }
+
+            .section {
+                margin-bottom: 20px; /* Increasing space between sections */
+            }
+
+            .quote {
+                font-size: 1rem; /* Smaller font size for quotes */
+            }
         }
     </style>
 </head>
