Update1 index.html

--- a/index.html
+++ b/index.html
@@ -32,15 +32,6 @@
             margin: 20px 0;
             text-align: center;
         }
-        .image-container {
-            text-align: center;
-            margin: 20px 0;
-        }
-        img {
-            width: 80%;
-            max-width: 500px;
-            border-radius: 10px;
-        }
         .link {
             text-align: center;
             margin-top: 20px;
@@ -111,7 +102,7 @@
 
         <!-- Section 2: Musikkarriere -->
         <div class="section">
-            <p>Musikken startet tidlig for Einar. Som barn satt han ved pianoet og forsøkte seg på klassiske melodier – når han ikke danset Moonwalk foran speilet, iført hvit sokk og glimt i øyet. I ungdomsårene gikk han under aliaset Ohlullaby, hvor han slapp flere obskure perler på SoundCloud. Etter hvert tok han et tydeligere kunstnerisk steg og ble Nattasang, med fokus på norsk lyrikk og mørk melodi. På Spotify kan man finne albumet Den Unge Nattasangs Lidelser, og selv om streamene fortsatt er i vek...
+            <p>Musikken startet tidlig for Einar. Som barn satt han ved pianoet og forsøkte seg på klassiske melodier – når han ikke danset Moonwalk foran speilet, iført hvit sokk og glimt i øyet. I ungdomsårene gikk han under aliaset Ohlullaby, hvor han slapp flere obskure perler på SoundCloud. Etter hvert tok han et tydeligere kunstnerisk steg og ble Nattasang, med fokus på norsk lyrikk og mørk melodi. På Spotify kan man finne albumet Den Unge Nattasangs Lidelser, og selv om streamene fortsatt er i vekstfasen, er uttrykket klart og ekte. Hans særpreg har fanget oppmerksomhet fra uventede kilder – blant annet et indisk musikknettsted som hevder han er "en av de tre mest lovende artistene i Skandinavia".</p>
 
             <div class="quote">
                 "You must be the change you wish to see in the world." – Einar Storvik, etter å ha startet karrieren i et teknologiselskap
@@ -120,7 +111,7 @@
 
         <!-- Section 3: Karrierer -->
         <div class="section">
-            <p>Einar Storvik startet karrieren i et av landets største teknologiselskaper – en aktør med millioner av kunder og landsdekkende dekning. Der steg han raskt i gradene, og ble kåret til toppselger på landsbasis. Det var ingen tilfeldighet. Han forsto folk, visste hva de trengte før de selv gjorde det, og leverte resultater ingen andre matchet. Etter noen år i det digitale landskapet tok han steget over til en ny gigant – en handelsimperium med butikker over hele landet og milliardomsetning hv...
+            <p>Einar Storvik startet karrieren i et av landets største teknologiselskaper – en aktør med millioner av kunder og landsdekkende dekning. Der steg han raskt i gradene, og ble kåret til toppselger på landsbasis. Det var ingen tilfeldighet. Han forsto folk, visste hva de trengte før de selv gjorde det, og leverte resultater ingen andre matchet. Etter noen år i det digitale landskapet tok han steget over til en ny gigant – en handelsimperium med butikker over hele landet og milliardomsetning hvert kvartal. Også her gjorde han seg raskt bemerket. Salgene kom naturlig, og posisjonen hans i systemet ble stadig sterkere. Einar presterer uansett arena, og har vist at uansett bransje eller produkt – han leverer.</p>
 
             <div class="quote">
                 "Han var den beste sexen jeg noen gang har hatt." – Margot Robbie til New York Times om ryktene som spredde seg om Margot og Einar Storvik.
@@ -129,7 +120,7 @@
 
         <!-- Section 4: Fotballkarriere -->
         <div class="section">
-            <p>Før han ble et kjent navn i musikk- og salgsmiljøet, var Einar Storvik en fryktet figur på fotballbanen. Han var lenge en bauta i Stjørdals-Blink, hvor han spilte over 70 kamper og scoret 46 mål. Men det som virkelig rystet lokalmiljøet, var overgangen til Tangmoen. Det var et klubbskifte få forstod, men som Einar selv beskrev som “et nødvendig valg for å utvikle seg som menneske og spiller”. Han gikk fra stadionlys til grusbane med stoisk ro, og tok med seg lederegenskapene og sklitakling...
+            <p>Før han ble et kjent navn i musikk- og salgsmiljøet, var Einar Storvik en fryktet figur på fotballbanen. Han var lenge en bauta i Stjørdals-Blink, hvor han spilte over 70 kamper og scoret 46 mål. Men det som virkelig rystet lokalmiljøet, var overgangen til Tangmoen. Det var et klubbskifte få forstod, men som Einar selv beskrev som “et nødvendig valg for å utvikle seg som menneske og spiller”. Han gikk fra stadionlys til grusbane med stoisk ro, og tok med seg lederegenskapene og sklitaklingene. På sitt beste var han en kombinasjon av styrke, ballkontroll og lederskap.</p>
 
             <div class="quote">
                 "Jeg selger billetter til min undergang" – Einar Storvik
